--- a/styles/style.css
+++ b/styles/style.css
@@ -19,23 +19,31 @@ body {
   width: 100%;
   padding: 0;
 }
-
-.main-header {
-  display: flex;
+a{
+  color: white;
+  text-decoration: none;
+}
+a:visited{
+  text-decoration: none;
+}
+a:hover{
+  color: #616C6F;
+  border-bottom: 3px solid darkgoldenrod;
+}
+.navbar {
+  display: flex !important;
   justify-content: space-between;
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   position: absolute;
   top: 0;
-  padding: 20px 40px;
-  align-items: center;
+  padding: 20px 40px !important;
+  align-items: center !important;
 }
 .branding {
   display: flex;
 }
-.brand-name {
-  font-size: 3.5em;
+.navbar-brand {
+  font-size: 3.5em !important;
   color: aliceblue;
   padding: 0;
   font-family: "Bubblegum Sans", "Roboto", sans-serif;
@@ -44,15 +52,15 @@ body {
   list-style-type: none;
   display: flex;
 }
-.nav-link-list li {
-  padding: 1em;
-  font-size: 1.5em;
-  font-weight: 800;
+.nav-item {
+  padding: 0 1em !important;
+  font-size: 1.5em !important;
+  font-weight: 800 !important;
   font-family: "Raleway", sans-serif;
 }
-.nav-link-list li a {
+.nav-item .nav-link{
   text-decoration: none;
-  color: white;
+  color: white !important;
 }
 .header-image {
   width: 100%;
@@ -84,8 +92,14 @@ body {
 .section-heading {
   margin-top: 1.5em;
   font-size: 2.75em;
-  font-weight: bold;
+  font-weight: bold;0
 }
+.about-us {
+  background-color: antiquewhite;
+  padding-bottom: 20px;
+  margin-top: 50px;
+}
+
 .about-us .descrip {
   display: flex;
   margin: 1em auto;
@@ -104,9 +118,51 @@ body {
 }
 .about-list li {
   padding: 0.5em;
-  font-size: 1.2em;
+  font-size: 1.15em;
 }
 .area-of-expert .descrip {
   display: flex;
   justify-content: space-between;
+}
+.area-of-expert-list {
+  list-style-type: none;
+  width: 600px;
+}
+.area-of-expert-list li {
+  font-size: 1.5em;
+  padding: 0.25em;
+}
+
+.container2{
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.main-footer{
+  background-color: #252525;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.heading{
+  font-size: 1.85em;
+  color: turquoise;
+  font-weight: bolder;
+  padding: 1em;
+}
+.link-list{
+  display: flex;
+  flex-direction: column;
+}
+.link-list li{
+  list-style-type: none;
+  color: #f1f1f1;
+  font-size: 1.12em;
+  margin-left: 30px;
+  padding: 0 0.25em;
+}
+svg{
+  color: white;
 }
